# Shoveler-registry

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  site-admins.example.yaml  tailwind.config.js
assets/: app.css
k8s/: cronjob.yaml  deployment.yaml  secret.example.yaml
portal/: __init__.py  auth.py  authz.py  config.py  db.py  expire.py  keys.py  main.py  tokens.py
portal/templates/: admin.html  base.html  dashboard.html  login.html  macros.html  not_authorized.html  secret_once.html
tests/: conftest.py  test_admin.py  test_authz.py  test_expire.py  test_flow.py  test_jwks.py  test_token.py
