[project]
name = "shoveler-auth-portal"
version = "0.1.0"
description = "Self-service JWT credential portal for the xrootd-monitoring-shoveler"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["portal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
